--- a/modules/backend/controllers/empresa/_menu.htm
+++ b/modules/backend/controllers/empresa/_menu.htm
@@ -37,6 +37,9 @@
     .padded-container.layout{
         padding: 0!important;
     }
+    .paddsix{
+        padding: 60px;
+    }
 </style>
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/empresa') ?>" >
