--- a/modules/backend/controllers/tipo/create.htm
+++ b/modules/backend/controllers/tipo/create.htm
@@ -41,7 +41,7 @@
         <div class="floatJuan left">
             <?= $this->makePartial('menu') ?>
         </div>
-        <div class="floatJuan right">
+        <div class="floatJuan right paddsix">
             <div class="layout">
 
                 <div class="layout-row">
