--- a/modules/backend/controllers/tipo/update.htm
+++ b/modules/backend/controllers/tipo/update.htm
@@ -34,6 +34,9 @@
     .toolbar-widget.list-header{
         margin-top: 23px!important;
     }
+    .paddsix{
+        padding: 60px;
+    }
 </style>
 <?php if (!$this->fatalError): ?>
 
@@ -42,7 +45,7 @@
 
             <?= $this->makePartial('menu') ?>
         </div>
-        <div class="floatJuan right">
+        <div class="floatJuan right paddsix">
             <div class="layout">
 
                 <div class="layout-row">
