--- a/modules/backend/controllers/empresa/_menu.htm
+++ b/modules/backend/controllers/empresa/_menu.htm
@@ -37,7 +37,7 @@
     .padded-container.layout{
         padding: 0!important;
     }
-    .paddsix{
+    .floatJuan.right.paddsix{
         padding: 60px;
     }
 </style>
