--- a/modules/backend/controllers/empresa/_list_toolbar.htm
+++ b/modules/backend/controllers/empresa/_list_toolbar.htm
@@ -1,3 +1,46 @@
+<style>
+    .layout-cell{
+        padding-top: 0!important;
+    }
+    .floatJuan{
+        display: table-cell;
+        vertical-align: top;
+    }
+    .floatJuan.left{
+        width: 100px;
+        max-width: 100px;
+        background: #175DA3;
+    }
+    .floatJuan.left [data-control="toolbar"]{
+        white-space: normal;
+    }
+    .floatJuan.left a{
+        display: block;
+        text-align: center;
+        font-family: AvenirNext-Medium;
+        font-size: 11px;
+        color: #FFFFFF;
+        letter-spacing: 0;
+    }
+    .floatJuan.left a img{
+        display: block;
+        margin: auto;
+        margin-top: 45px;
+        margin-bottom: 15px;
+    }
+    .floatJuan.right{
+        width: 80%;
+    }
+    .toolbar-widget.list-header{
+        margin-top: 23px!important;
+    }
+    .padded-container.layout{
+        padding: 0!important;
+    }
+    .floatJuan.right.paddsix{
+        padding: 60px;
+    }
+</style>
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/empresa/create') ?>" class="btn btn-primary oc-icon-plus">
         Nueva empresa
