--- a/modules/backend/controllers/empresa/_list_toolbar.htm
+++ b/modules/backend/controllers/empresa/_list_toolbar.htm
@@ -1,44 +1,13 @@
 <style>
-    .layout-cell{
-        padding-top: 0!important;
-    }
-    .floatJuan{
-        display: table-cell;
-        vertical-align: top;
-    }
-    .floatJuan.left{
-        width: 100px;
-        max-width: 100px;
+    .btn.btn-primary.oc-icon-plus{
         background: #175DA3;
-    }
-    .floatJuan.left [data-control="toolbar"]{
-        white-space: normal;
-    }
-    .floatJuan.left a{
-        display: block;
-        text-align: center;
+        border-radius: 4px;
         font-family: AvenirNext-Medium;
-        font-size: 11px;
+        font-size: 14px;
         color: #FFFFFF;
         letter-spacing: 0;
-    }
-    .floatJuan.left a img{
-        display: block;
-        margin: auto;
-        margin-top: 45px;
-        margin-bottom: 15px;
-    }
-    .floatJuan.right{
-        width: 80%;
-    }
-    .toolbar-widget.list-header{
-        margin-top: 23px!important;
-    }
-    .padded-container.layout{
-        padding: 0!important;
-    }
-    .floatJuan.right.paddsix{
-        padding: 60px;
+        border: 1px solid #FFFFFF;
+        padding: 16px 20px;
     }
 </style>
 <div data-control="toolbar">
