--- a/modules/backend/controllers/empresa/create.htm
+++ b/modules/backend/controllers/empresa/create.htm
@@ -74,7 +74,7 @@
                             <?= e(trans('backend::lang.form.create_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
+                            <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
                         </span>
                     </div>
                 </div>
