--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -71,7 +71,7 @@
                             <?= e(trans('backend::lang.form.save_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
+                            <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
                         </span>
                         <button
                             type="button"
