--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -39,7 +39,7 @@ $this['metaImg'] = $this['empresa']->image;
 ==
 
 <!-- HEADER -->
-<div class="header-search search-exp bussinesPage sxxx" style="background-image: url({{type.image}})">
+<div class="header-search search-exp bussinesPage sxxx" style="background-image: url({{empresa.image}})">
 
     <div class="header-container big-div">
         <div id="exp-header" class="header-txt">
