--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -53,7 +53,7 @@ is_hidden = 0
             <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
         </div>
 
-        <p class="txt text-center whatDoYouNeedCadiz"><span>{{'¿Qué necesitas de cadiz?'|_}}</span></p>
+        <p class="txt text-center whatDoYouNeedCadiz"><span>{{'¿Qué necesitas de Cádiz?'|_}}</span></p>
 
         <!-- SEARCH -->
         <div id='prtlSearch'>
