--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -6,10 +6,10 @@ is_hidden = 0
 [staticApp]
 
 ==
-<?php  
-	
+<?php
+
 	function onStart()
-	{	    
+	{
             $this['urlPage'] = $this->page->url;
 
 $slug = $this->param('slug');
@@ -41,18 +41,45 @@ if($this['empresa']){
 ==
 
 <!-- HEADER -->
-<div class="header-search search-exp bussinesPage sxxx" style="background-image: url({{empresa.image}})">
+<div class="header-event bussinesPage sxxx" style="background-image: url({{empresa.image}})">
 
-    <div class="header-container big-div">
+    <div class="header-container">
         <div id="exp-header" class="header-txt">
             <p class="txt"><span id="exp" class="first-word">{{empresa.name}}</span></p>
             <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
         </div>
     </div>
+		<div id="out-features" class="event-features">
+				<div class="feature-exp">
 
+						<img src="{{'assets/img/mobile.svg'|theme}}">
+						<p class="feature-txt">{{empresa.tlf}}</p>
+
+				</div>
+				<div class="feature-exp">
+
+						<img src="{{'assets/img/email.svg'|theme}}">
+						<p class="feature-txt">{{empresa.email}}</p>
+
+				</div>
+				<div class="feature-exp">
+						<a class="link-exp" href="{{empresa.site}}">
+								<img src="{{'assets/img/web.svg'|theme}}">
+								<p class="feature-txt">{{empresa.site | replace({'http://': '', 'https://': ''})}}</p>
+						</a>
+
+				</div>
+				<div class="feature-exp">
+
+						<img src="{{'assets/img/site2.svg'|theme}}">
+						<p class="feature-txt">{{empresa.municipality | capitalize}}</p>
+						<a class="linkMapss" href="{{empresa.url_map}}" target="_blank">Ver mapa</a>
+				</div>
+		</div>
 </div>
+<div id="phantom-div"></div>
 <div class="bussinesPage llls">
-    <div id="out-features" class="event-features">
+    <!-- <div id="out-features" class="event-features">
         <div class="feature-exp">
 
             <img src="{{'assets/img/mobile.svg'|theme}}">
@@ -78,7 +105,7 @@ if($this['empresa']){
             <p class="feature-txt">{{empresa.municipality | capitalize}}</p>
             <a class="linkMapss" href="{{empresa.url_map}}" target="_blank">Ver mapa</a>
         </div>
-    </div>
+    </div> -->
     <section class="desc">
         <h3>
             {{empresa.title}}
