--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -40,7 +40,7 @@ if($this['empresa']){
 ?>
 ==
 <!-- HEADER -->
-<div class="header-event bussinesPage sxxx" style="background-image: url({{empresa.image}})">
+<div class="header-empresa bussinesPage sxxx" style="background-image: url({{empresa.image}})">
 
     <div class="header-container">
         <div id="exp-header" class="header-txt">
