--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -72,7 +72,7 @@ if($this['empresa']){
 
 						<img src="{{'assets/img/site2.svg'|theme}}">
 						<p class="feature-txt">{{empresa.municipality | capitalize}}</p>
-						<a class="feature-txt-mapa" href="{{empresa.url_map}}" target="_blank">Ver mapa</a>
+						<a class="feature-txt-empresa" href="{{empresa.url_map}}" target="_blank">Ver mapa</a>
 				</div>
 		</div>
 </div>
