--- a/themes/default/pages/allevents.htm
+++ b/themes/default/pages/allevents.htm
@@ -28,6 +28,7 @@ is_hidden = 0
 
     $this['events'] = $this->staticApp->eventAll();
 
+    $this['ptitle'] = 'Cádiz | Todos los eventos';
     
 	}
 
