--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -45,7 +45,7 @@ is_hidden = 0
 ==
 
 <!-- HEADER -->
-<div class="header-general search-empresas bussinesPage">
+<div id="search-empresas" class="header-general search-empresas bussinesPage">
 
     <div class="header-container big-div">
         <div id="exp-header" class="header-txt">
