--- a/themes/default/pages/allevents.htm
+++ b/themes/default/pages/allevents.htm
@@ -28,8 +28,8 @@ is_hidden = 0
 
     $this['events'] = $this->staticApp->eventAll();
 
-    $this['ptitle'] = 'Cádiz | Todos los eventos';
-    
+    $this['ptitle'] = 'Cádiz | Eventos';
+    $this['metaTitle'] = 'Cádiz | Eventos';
 	}
 
 	function onFindEvent(){
