--- a/themes/default/pages/allrutas.htm
+++ b/themes/default/pages/allrutas.htm
@@ -28,6 +28,8 @@ is_hidden = 0
 
     $this['rutas'] = $this->staticApp->rutaAll();
 
+    $this['ptitle'] = 'Cádiz | Rutas';
+    $this['metaTitle'] = 'Cádiz | Rutas';
 
 	}
 
