--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -27,6 +27,9 @@ is_hidden = 0
 
     $this['events'] = $this->staticApp->eventAll();
 
+    $this['ptitle'] = 'Cádiz | Te hace libre';
+    $this['metaTitle'] = 'Cádiz | Te hace libre';
+
 	}
 
 	function onFindExperience(){
