--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -36,6 +36,9 @@ is_hidden = 0
       $this['empresas'] = json_decode(Session::get('reciveData'));     
     }
 
+    $this['ptitle'] = 'Cádiz | Empresas';
+    $this['metaTitle'] = 'Cádiz | Empresas';
+
 	}
 
 	function onFindEmpresa(){
