--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -26,6 +26,8 @@ is_hidden = 0
 
         $this['news'] = $this->staticApp->newListPag($this['idm'],1,$this['numberReg']);
 
+        $this['ptitle'] = 'Cádiz | Sala de prensa';
+    	$this['metaTitle'] = 'Cádiz | Sala de prensa';
 	}
 
 	function onPaginate(){
