--- a/themes/default/pages/experiences.htm
+++ b/themes/default/pages/experiences.htm
@@ -30,6 +30,9 @@ is_hidden = 0
       $this['experiences'] = json_decode(Session::get('reciveData'));     
     }
 
+    $this['ptitle'] = 'Cádiz | Experiencias';
+    $this['metaTitle'] = 'Cádiz | Experiencias';
+
 	}
 
 
