--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -31,6 +31,9 @@ is_hidden = 0
 
     $this['type'] = $this->staticApp->getTipoBySlug($this->param('type'));
 
+    $this['ptitle'] = 'Cádiz | Empresas';
+    $this['metaTitle'] = 'Cádiz | Empresas';
+
 	}
 
   function onPaginate(){
