--- a/themes/default/pages/listevents.htm
+++ b/themes/default/pages/listevents.htm
@@ -30,6 +30,8 @@ is_hidden = 0
       $this['events'] = json_decode(Session::get('reciveData'));     
     }
 
+    $this['ptitle'] = 'Cádiz | Eventos';
+    $this['metaTitle'] = 'Cádiz | Eventos';
 	}
 
 	function onFindEvent(){
