--- a/themes/default/pages/listrutas.htm
+++ b/themes/default/pages/listrutas.htm
@@ -31,6 +31,8 @@ is_hidden = 0
       $this['rutas'] = json_decode(Session::get('reciveData'));
     }
 
+    $this['ptitle'] = 'Cádiz | Rutas';
+    $this['metaTitle'] = 'Cádiz | Rutas';
 
 
 	}
