--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -84,7 +84,7 @@ is_hidden = 0
 
   <div class="header-container big-div">
     <div id="exp-header" class="header-txt">
-      <p class="txt"><span id="exp" class="first-word">{{'Empresas del sector'|_}}</span></p>
+      <p class="txt"><span id="exp" class="first-word">{{'Directorio de empresas'|_}}</span></p>
         <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
     </div>
     <!-- SEARCH -->
