--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -97,7 +97,7 @@ is_hidden = 0
   </div>
 </div>
 
-<div id='prtlEmpresasl' class="all-exps bussinesPage">
+<div id='prtlEmpresasl' class="all-events bussinesPage">
   {% partial "empresas" %}
 </div>
 
