--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -114,6 +114,13 @@ is_hidden = 0
             {{empresa.description}}
         </p>
     </section>
+
+		{% for image in empresa.images %}
+			<div class="section-img">
+				<img src="{{image}}">
+			</div>
+		{% endfor %}
+
     {% if empresa.info %}
         <section class="info">
             <h3>
