--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -117,7 +117,7 @@ is_hidden = 0
 
 		{% for image in empresa.images %}
 			<div class="section-img">
-				<img src="{{image}}">
+				<p>{{image}}</p>
 			</div>
 		{% endfor %}
 
