--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -76,8 +76,7 @@ is_hidden = 0
 
                     <li>
 
-                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}} <img src="{{'assets/img/arrow.svg'|theme}}"
-                                                                                                             alt=""></a>
+                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}}</a>
 
                     </li>
 
@@ -92,8 +91,7 @@ is_hidden = 0
 
                     <li>
 
-                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}} <img src="{{'assets/img/arrow.svg'|theme}}"
-                                                                                                             alt=""></a>
+                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}}</a>
 
                     </li>
 
@@ -109,8 +107,7 @@ is_hidden = 0
 
                     <li>
 
-                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}} <img src="{{'assets/img/arrow.svg'|theme}}"
-                                                                                                             alt=""></a>
+                        <a href="{{url('/')}}/{{lang}}/empresas-por-sector/{{type.slug}}">{{type.name}}</a>
 
                     </li>
 
