--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -49,7 +49,8 @@
                     <?= $this->formRenderOutsideFields() ?>
                     <?= $this->formRenderPrimaryTabs() ?>
                 </div>
-
+                <div class="float-right-photos">
+                </div>
                 <div class="form-buttons">
                     <div class="loading-indicator-container">
                         <button
@@ -81,8 +82,6 @@
                             data-request-confirm="¿Eliminar esta empresa?">
                         </button>
                     </div>
-                </div>
-                <div class="floatJuan float-right-photos">
                 </div>
             </div>
         <?php Block::endPut() ?>
