--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -42,7 +42,7 @@
         <div class="floatJuan left">
             <?= $this->makePartial('menu') ?>
         </div>
-        <div class="floatJuan right paddsix">
+        <div id="custom-float" class="floatJuan right paddsix">
             <div class="layout">
 
                 <div class="layout-row">
