--- a/modules/backend/controllers/tipo/update.htm
+++ b/modules/backend/controllers/tipo/update.htm
@@ -48,6 +48,8 @@
                 <div class="layout-row">
                     <?= $this->formRenderOutsideFields() ?>
                     <?= $this->formRenderPrimaryTabs() ?>
+                    <div class="float-right-photos">
+                    </div>
                 </div>
 
                 <div class="form-buttons">
@@ -107,4 +109,3 @@
     <?php endif ?>
 
         </div>
-
