--- a/modules/backend/controllers/tipo/create.htm
+++ b/modules/backend/controllers/tipo/create.htm
@@ -47,6 +47,8 @@
                 <div class="layout-row">
                     <?= $this->formRenderOutsideFields() ?>
                     <?= $this->formRenderPrimaryTabs() ?>
+                    <div class="float-right-photos">
+                    </div>
                 </div>
 
                 <div class="form-buttons">
