--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -85,7 +85,7 @@ is_hidden = 0
 ==
 
 <!-- HEADER -->
-<div class="header-search search-empresas bussinesPage">
+<div class="header-general search-empresas bussinesPage">
 
   <div class="header-container big-div">
     <div id="exp-header" class="header-txt">
