--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -43,7 +43,7 @@ is_hidden = 0
         if($pubicacion[0]){
           $ubicacion = implode('_', $pubicacion);
         } else {
-          $ubicacion = 'todos-los-municipios'
+          $ubicacion = 'todos-los-municipios';
         }
 
         if($psearch == ''){
