--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -50,7 +50,7 @@ is_hidden = 0
     if($pubicacion[0]){
       $ubicacion = implode('_', $pubicacion);
     } else {
-      $ubicacion = 'todos-los-municipios'
+      $ubicacion = 'todos-los-municipios';
     }
     
 
