--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -42,16 +42,22 @@ is_hidden = 0
 	}
 
 	function onFindEmpresa(){
+  
 
     $type = $_POST['type'];
-    $pubicacion = $_POST['location'];
+    if (isset($_POST['location'])){
+       $pubicacion = $_POST['location'];
+    }
+
     $psearch = $_POST['search'];
 
-    if($pubicacion[0]){
+    if(isset($pubicacion[0])){
       $ubicacion = implode('_', $pubicacion);
     } else {
       $ubicacion = 'todos-los-municipios';
     }
+
+    
     
 
     if($psearch == ''){
