--- a/themes/default/pages/empresas.htm
+++ b/themes/default/pages/empresas.htm
@@ -56,9 +56,8 @@ is_hidden = 0
         }
 
       	$empresas = $this->staticApp->empresasFindPag($type,$ubicacion,$search,1,9);
-       	//Session::put('data',json_encode($empresas));
 
-      	return Redirect::to($aLang.'/listado-de-empresas/'.$type.'/'.$ubicacion.'/'.$search)->with( ['data' => json_encode($empresas)] );
+      	return Redirect::to($aLang.'/listado-de-empresas/'.$type.'/'.$ubicacion.'/'.$search);
 
     }
 
