--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -57,10 +57,8 @@ is_hidden = 0
 
 				</div>
 				<div class="feature-exp">
-
 						<img src="{{'assets/img/email.svg'|theme}}">
-						<p class="feature-txt">{{empresa.email}}</p>
-
+						<a href="mailto:{{empresa.email}}" class="feature-txt">{{empresa.email}}</a>
 				</div>
 				<div class="feature-exp">
 						<a class="link-exp" href="{{empresa.site}}">
@@ -76,7 +74,7 @@ is_hidden = 0
 						<a class="feature-txt-empresa" href="{{empresa.url_map}}" target="_blank">Ver mapa</a>
 				</div>
 
-                
+
 		</div>
 </div>
 <div class="bussinesPage llls">
