--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -63,7 +63,7 @@ is_hidden = 0
 				<div class="feature-exp">
 						<a class="link-exp" href="{{empresa.site}}">
 								<img src="{{'assets/img/web.svg'|theme}}">
-								<p class="feature-txt">{{empresa.site | replace({'http://': '', 'https://': ''})}}</p>
+								<a href="{{empresa.site}}" class="feature-txt">{{empresa.site | replace({'http://': '', 'https://': ''})}}</a>
 						</a>
 
 				</div>
