--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -54,7 +54,7 @@ is_hidden = 0
 ==
 
 <!-- HEADER -->
-<div class="header-search search-exp bussinesPage" style="background-image: url({{type.image}})">
+<div id="header-sector" class="header-search search-exp bussinesPage" style="background-image: url({{type.image}})">
 
   <div class="header-container big-div">
     <div id="exp-header" class="header-txt">
