--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -1,8 +1,11 @@
 title = "Page not found (404)"
 url = "/404"
 ==
-<div class="">
-    <div class="container">
-        <h1>404</h1>
-    </div>
+<div class="not-found-container">
+  <img class="logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg">
+  <div class="not-found">
+    <h1>404</h1>
+    <p>No encontramos lo que buscas</p>
+    <a href="{{'home'| page}}">Volver <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/back-cuatro.svg" alt=""> </a>
+  </div>
 </div>
