--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -1,5 +1,6 @@
 title = "Page not found (404)"
 url = "/404"
+layout = "dinamic"
 ==
 <div class="not-found-container">
   <img class="logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg">
