--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -2,6 +2,11 @@ title = "Page not found (404)"
 url = "/404"
 layout = "dinamic"
 ==
+<style>
+  footer, .slidemenu, .mini-logo-container, .language-container {
+    display: none;
+  }
+</style>
 <div class="not-found-container">
   <img class="logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg">
   <div class="not-found">
