--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -3,7 +3,7 @@ url = "/404"
 layout = "dinamic"
 ==
 <style>
-  footer, .slidemenu, .mini-logo-container, .language-container {
+  footer, .slidemenu, .mini-logo-container, .language-container, .navigation {
     display: none;
   }
 </style>
