--- a/modules/backend/controllers/tipo/update.htm
+++ b/modules/backend/controllers/tipo/update.htm
@@ -73,7 +73,7 @@
                             <?= e(trans('backend::lang.form.save_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/tipo') ?>">Volver</a>
+                            <!-- <?= e(trans('backend::lang.form.or')) ?> --><a href="<?= Backend::url('backend/tipo') ?>">Volver</a>
                         </span>
                         <button
                             type="button"
