--- a/modules/backend/controllers/tipo/create.htm
+++ b/modules/backend/controllers/tipo/create.htm
@@ -71,7 +71,7 @@
                             <?= e(trans('backend::lang.form.create_and_close')) ?>
                         </button>
                         <span class="btn-text">
-                            <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/tipo') ?>">Volver</a>
+                            <!-- <?= e(trans('backend::lang.form.or')) ?> --> <a href="<?= Backend::url('backend/tipo') ?>">Volver</a>
                         </span>
                     </div>
                 </div>
