rutas url full with filters at search

--- a/themes/default/pages/allrutas.htm
+++ b/themes/default/pages/allrutas.htm
@@ -44,7 +44,10 @@ is_hidden = 0
   	$aLang = App::getLocale();
     $rutas = $this->staticApp->rutaFind($category,$days,$location);
 
-    return Redirect::to($aLang.'/listado-de-rutas')->with( ['data' => json_encode($rutas)] );
+    //return Redirect::to($aLang.'/listado-de-rutas')->with( ['data' => json_encode($rutas)] );
+
+    return Redirect::to($aLang.'/listado-de-rutas'.'/'.str_slug($category).'/'.$days.'/'.str_slug($location));
+
 
   }
 
