--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -8,7 +8,7 @@ layout = "dinamic"
   }
 </style>
 <div class="not-found-container">
-  <img class="logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg">
+  <a href="{{'home'| page}}"><img class="logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg"></a>
   <div class="not-found">
     <h1>404</h1>
     <p>No encontramos lo que buscas</p>
