--- a/themes/default/pages/allevents.htm
+++ b/themes/default/pages/allevents.htm
@@ -34,7 +34,6 @@ is_hidden = 0
 
 	function onFindEvent(){
 
-
     $category = $_POST['category'];
     $location = $_POST['location'];
     $datepicker = explode('-', $_POST['datepicker']);
@@ -48,7 +47,9 @@ is_hidden = 0
   	$aLang = App::getLocale();
     $events = $this->staticApp->eventFind($category,$daystart,$dayend,$location);
     
-    return Redirect::to($aLang.'/listado-de-eventos')->with( ['data' => json_encode($events)] );
+    //return Redirect::to($aLang.'/listado-de-eventos')->with( ['data' => json_encode($events)] );
+
+    return Redirect::to($aLang.'/listado-de-eventos'.'/'.str_slug($category).'/'.$daystart.'/'.$dayend.'/'.str_slug($location));
  
   }
 
