--- a/themes/default/pages/listrutas.htm
+++ b/themes/default/pages/listrutas.htm
@@ -121,23 +121,23 @@ is_hidden = 0
      switch ($value) {
       
         case 'cultura':
-        $category = 'Cultura';
+        $category = 'cultura';
         break;
 
         case 'deporte':
-        $category = 'Deporte';
+        $category = 'deporte';
         break;
 
         case 'gastronomia':
-        $category = 'Gastronomía';
+        $category = 'gastronomía';
         break;
 
         case 'naturaleza':
-        $category = 'Naturaleza';
+        $category = 'naturaleza';
         break;
 
         case 'ocio':
-        $category = 'Ocio';
+        $category = 'ocio';
         break;
       
         case 'todas-las-categorias':
