--- a/themes/default/pages/listevents.htm
+++ b/themes/default/pages/listevents.htm
@@ -104,8 +104,8 @@ is_hidden = 0
         break;
        
       default:
-        $location = ucfirst($this->param('location'));
-        $location = str_replace('-', ' ', $location);
+        $lpocation = ucfirst($this->param('location'));
+        $location = str_replace('-', ' ', $plocation);
         break;
     }
 
