--- a/themes/default/pages/listevents.htm
+++ b/themes/default/pages/listevents.htm
@@ -104,12 +104,12 @@ is_hidden = 0
         break;
        
       default:
-        $lpocation = ucfirst($this->param('location'));
+        $plocation = ucfirst($this->param('location'));
         $location = str_replace('-', ' ', $plocation);
         break;
     }
 
-   
+
     return $location;
   }
 
