--- a/themes/default/pages/listevents.htm
+++ b/themes/default/pages/listevents.htm
@@ -23,8 +23,10 @@ is_hidden = 0
 		}
     
     $category = $this->getCategroia($this->param('category'));
-    $location = $this->getLocation($this->param('location'));
+    //$location = $this->getLocation($this->param('location'));
 
+    $location = $this->staticApp->getMunicipalitiesBySlug($this->param('location'));
+    
     $this['events'] = $this->staticApp->eventFind($category,$this->param('daystart'),$this->param('dayend'),$location);
 
     $this['ptitle'] = 'Cádiz | Eventos';
