--- a/themes/default/pages/listrutas.htm
+++ b/themes/default/pages/listrutas.htm
@@ -23,7 +23,8 @@ is_hidden = 0
 		}
 
     $category = $this->getCategroia($this->param('category'));
-    $location = $this->getLocation($this->param('location'));
+    //$location = $this->getLocation($this->param('location'));
+    $location = $this->staticApp->getMunicipalitiesBySlug($this->param('location'));
     
     $days = $this->param('days');
     if($days == 'dejate-llevar'){
