--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -58,7 +58,7 @@
                             data-request="onSave"
                             data-request-data="redirect:0"
                             data-hotkey="ctrl+s, cmd+s"
-                            data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
+                            data-load-indicator="Empresa actualizada"
                             class="btn btn-primary">
                             <?= e(trans('backend::lang.form.save')) ?>
                         </button>
@@ -67,7 +67,7 @@
                             data-request="onSave"
                             data-request-data="close:1"
                             data-hotkey="ctrl+enter, cmd+enter"
-                            data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
+                            data-load-indicator="Empresa actualizada"
                             class="btn btn-default">
                             <?= e(trans('backend::lang.form.save_and_close')) ?>
                         </button>
