--- a/modules/backend/controllers/empresa/create.htm
+++ b/modules/backend/controllers/empresa/create.htm
@@ -62,7 +62,7 @@
                             type="submit"
                             data-request="onSave"
                             data-hotkey="ctrl+s, cmd+s"
-                            data-load-indicator="Empresa creada"
+                            data-load-indicator="<?= e(trans('backend::lang.form.creating')) ?>"
                             class="btn btn-primary">
                             <?= e(trans('backend::lang.form.create')) ?>
                         </button>
@@ -71,7 +71,7 @@
                             data-request="onSave"
                             data-request-data="close:1"
                             data-hotkey="ctrl+enter, cmd+enter"
-                            data-load-indicator="Empresa creada"
+                            data-load-indicator="<?= e(trans('backend::lang.form.creating')) ?>"
                             class="btn btn-default">
                             <?= e(trans('backend::lang.form.create_and_close')) ?>
                         </button>
