Cambiar sólo a "Tipo de visitas"

--- a/modules/backend/controllers/tiposvisitas/create.htm
+++ b/modules/backend/controllers/tiposvisitas/create.htm
@@ -44,7 +44,7 @@
         <div class="floatJuan right paddsix">
             <div class="layout">
                 <div class="header_categroy">
-                    <h1>Tipos de visitas de experiencia</h1>
+                    <h1>Tipos de visitas</h1>
                 </div>
                 <div class="layout-row">
                     <?= $this->formRenderOutsideFields() ?>
