--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -115,7 +115,7 @@ is_hidden = 0
 <div id='prtlPagination'>
   {% partial "pagination" %}
 </div>
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
 	$('html, body').animate({
