--- a/modules/backend/controllers/tiposvisitas/_list_toolbar.htm
+++ b/modules/backend/controllers/tiposvisitas/_list_toolbar.htm
@@ -1,5 +1,5 @@
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/tiposvisitas/create') ?>" class="btn btn-primary oc-icon-plus">
-        Nuevo tipo de vista
+        Nuevo tipo de visita
     </a>
 </div>
