--- a/modules/backend/controllers/intereses/_menu.htm
+++ b/modules/backend/controllers/intereses/_menu.htm
@@ -49,7 +49,7 @@
 
     <a href="<?= Backend::url('backend/tiposvisitas') ?>" >
         <img src="/modules/backend/assets/images/tvisitas.svg" alt="">
-        Tipo de visita de experiencias
+        Tipos de visita
     </a>
 
     <a href="<?= Backend::url('backend/catgeventos') ?>" >
