--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -96,7 +96,7 @@ is_hidden = 0
 
         <div class="header-comment">
           <p class="comment">{{ home.parrafo }}</p>
-          <a class="header-link" href="{{url('/')}}/{{lang}}/home.enlace">{{ home.enlace_titulo }} &nbsp;<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow.svg" alt=""> </a>
+          <a class="header-link" href="{{url('/')}}/{{lang}}/{{home.enlace}}">{{ home.enlace_titulo }} &nbsp;<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow.svg" alt=""> </a>
         </div>
       </div>
     </div>
